# PopV

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Automated_Cell_Annotation.ipynb  LICENSE  README.md  README.md.rej  codecov.yml  conftest.py  demo_colab.ipynb  pyproject.toml  pyproject.toml.rej  setup.py  tabula_sapiens_tutorial.ipynb  test.ipynb  tutorial.ipynb
.github/: test.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  release.yml  test.yaml  test.yml  test_gpu.yml
docs/: api.md  conf.py  contributing.md  index.md  tutorials.md
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/jupyter_execute/notebooks/: tabula_sapiens_tutorial.ipynb
docs/notebooks/: tabula_sapiens_tutorial.ipynb
docs/reference/: popv.algorithms.knn_on_scvi.rst  popv.algorithms.scanvi.rst
github/: test.yml
ontology/: cl.ontology
popv/: __init__.py  _accuracy.py  _settings.py  _utils.py  accuracy.py  alluvial.py  annotation.py  methods.py  preprocessing.py  utils.py  visualization.py
popv/__pycache__/: __init__._is_not_count-277.py37m.1.nbc  __init__._is_not_count-277.py37m.2.nbc  __init__._is_not_count-277.py37m.3.nbc  __init__._is_not_count-277.py37m.4.nbc  __init__._is_not_count-277.py37m.nbi
popv/algorithms/: __init__.py  _base_algorithm.py  _bbknn.py  _celltypist.py  _harmony.py  _onclass.py  _rf.py  _scaffold_algorithm.py  _scanorama.py  _scanvi.py  _scvi.py  _svm.py
popv/reproducibility/: _accuracy.py  _alluvial.py
popv_test_results/: OnClass.index  celltypist.pkl  checkpoint  obo_dag.pkl  rf_classifier.pkl  scvi_knn_classifier.pkl
resources/ontology/: cl.ontology
tests/: __init__.py  conftest.py  test_models.py
tests/core/: test_models.py
